<resources>
    <string name="app_name">ShoppingApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_option">Select an Category</string>
    <string name="total_amount_0">Total Amount: $0.00</string>
    <string name="product_list_empty">Products list is null</string>
    <string name="failed_to_fetch_product">Failed to fetch products</string>
    <string name="zero">0</string>
    <string name="x">x</string>
    <string name="total_amount">Total amount:</string>
    <string name="buy">Buy</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="_0">0</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove">Remove</string>
    <string name="categories">Categories</string>
    <string name="_0rs">0Rs</string>
    <string name="total_product_in_float">Total Amount: $%.2f</string>
    <string-array name="category_array">
        <item>All</item>
        <item>men\'s clothing</item>
        <item>jewelery</item>
        <item>electronics</item>
        <item>women\'s clothing</item>
        <item>Suggested categories</item>
    </string-array>
</resources>